# brag-frog

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
brag-frog-mozilla/deploy/: Dockerfile.mozilla
config/: assessment_templates.toml  checkin_sections.toml  clg_levels.toml  rating_scale.toml  review_sections.toml  services.toml
docs/: architecture.md  conventions.md  customization.md  getting-started.md  self-hosting.md
migrations/: 001_initial.sql  002_priorities_redesign.sql  003_drop_legacy_tables.sql  004_remove_kr_from_priorities.sql  005_remove_category_from_department_goals.sql  006_add_meeting_goal.sql  007_remove_description_from_priorities.sql  008_people_aliases.sql  009_add_team_to_people_aliases.sql  010_priority_level_and_measurement.sql  011_external_id_for_imports.sql  012_fix_external_id_indexes.sql  013_priority_tracking_and_tier.sql  014_priority_updates.sql  015_checkin_habit_fields.sql  016_focus_enhancements.sql  017_priority_update_blockers.sql  018_status_updates.sql  019_relationship_and_monthly.sql  020_protocol_and_todos.sql  021_remove_focus_and_todos.sql  022_last_week_reports.sql  023_remove_legacy_checkins_protocol.sql
src/: app.rs  lib.rs  main.rs
src/ai/: helpers.rs  mod.rs  prompts.rs
src/analytics/: insights.rs  mod.rs
templates/: base.html
website/: index.html  privacy.html  terms.html  vercel.json
(+254 files in other folders)
