[package]
name = "brag-frog"
version = "3.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tera = "1"
reqwest = { version = "0.13", features = ["json", "form", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-sessions = "=0.14.0"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
rand = "0.9"
thiserror = "2"
urlencoding = "2"
time = "0.3"
pulldown-cmark = "0.13"
ammonia = "4"
url = "2"
toml = "0.8"
csv = "1"
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
